--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"marked": "^15.0.7"
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"marked": "^15.0.7",
+		"svelte-awesome-color-picker": "^3.1.4",
+		"svelte-fa": "^4.0.3"
 	}
 }
